--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "resume-bandit",
   "version": "0.0.1",
   "description": "Developer resume generator",
-  "main": "index.js",
+  "main": "src/bandit.js",
+  "bin": "src/bandit.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,10 @@
     "resume"
   ],
   "author": "Alexander Ovchinnikov",
+  "repository": {
+    "type": "git",
+    "url":"https://github.com/Alexander-0x80/resume-bandit.git"
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "commander": "^2.8.1",
