--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "commander": "^2.8.1",
     "consolidate": "^0.13.1",
     "express": "^4.13.1",
+    "html-pdf": "^1.2.2",
     "js-yaml": "^3.3.1",
     "underscore": "^1.8.3"
   }
